# multiproposal-internal

./: .gitattributes  .gitignore  LICENSE  README.md  README_context.md  environment.yml  pyproject.toml  requirements.txt
.multip-env/: pyvenv.cfg
docs/: sbd_implementation.md
nathan/: MCMC_Sampliers.ipynb  Testing.ipynb  interpreting_nathan.txt  nathan_code.txt
nathan/Large_p_Limit/: AD_Examples.ipynb  (+11 more)
notebooks/: 01_gp_regression_sanity.ipynb  01_toy_custom_likelihood_matplotlib.ipynb  02_toy_multiwell_mpcn.ipynb  02_toy_multiwell_mpcn_P_rho_sweep.ipynb  03_polar_twist_mpcn.ipynb  03_polar_twist_mpcn_P_rho_sweep.ipynb  03_polar_twist_mpcn_independent_chains.ipynb  03_polar_twist_mtpcn.ipynb  04_toy_solute_transport_mpcn.ipynb  04_toy_solute_transport_mpcn_P_rho_compare.ipynb  04_toy_solute_transport_mpcn_P_rho_sweep.ipynb  04_toy_solute_transport_mpcn_P_rho_sweep_old.ipynb  04_toy_solute_transport_mpcn_independent_chains.ipynb  04_toy_solute_transport_mpcn_independent_chains_old.ipynb  05_linear_programming_for_transition_matrix.ipynb  05_toy_solute_transport_mpcn_convergence.ipynb  06_mess_uniform_varying_m.ipynb  07_lambda_sensitivity.ipynb  08_logistic_regression_ess_mess.ipynb  09_sbd_ess_mess.ipynb  10_advection_diffusion_toy.ipynb  10_advection_diffusion_toy.ipynb.bak-20260214-104750  11_advection_diffusion_dim_sweep.ipynb  11_advection_diffusion_dim_sweep_shared_draws_lp_compare.ipynb  12_advection_diffusion_obs_scale.ipynb
reports/: diagnostics.md  figure_style.py  observables_structured_sparse_antisymmetric_A.md  plot_policy.md  run_policy.md
(+57 files in other folders)
