[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiproposal"
version = "0.1.0"
description = "Research code for multiproposal MCMC"
authors = [{ name = "Guillermina Senn" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]